--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,8 +1,6 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <div class="alert alert-danger" *ngIf="error">
-      <p>{{ error }}</p>
-    </div>
+    <app-alert [message]="error" *ngIf="error" (closeAlert)="onErrorAlert()"></app-alert>
     <div class="d-flex justify-content-center" *ngIf="isLoading">
       <div class="spinner-border" role="status">
         <span class="visually-hidden">Loading...</span>
